# Pac-Man

./: MARIO  Makefile  README.md  config.json  pac-man.py  pyproject.toml
.claude/agent-memory/socratic-coding-mentor/: MEMORY.md  project_pacman_status.md  user_profile.md
.claude/agents/: socratic-coding-mentor.md
src/: __init__.py
src/game_logic/: __init__.py  config.py  game_engine.py  ghosts.py  maze.py  player.py
src/game_logic/entities/: __init__.py  entity.py  ghost_types.py  ghosts.py  items.py  player.py
src/ui/: music_manager.py
src/ui/gameplay/: __init__.py  hud.py  maze_draw.py  mazegraph.py
src/ui/gameplay/entities/: __init__.py  ghost_draw.py  player_draw.py
src/ui/screens/: bottons.py  gameover.py  main_menu.py  sub_screens.py  victory.py
