[project]
name = "gitpacman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.3",
    "wheel>=0.47.0",
    "mazegenerator",
    "pygame>=2.6.1",
]

[tool.uv.sources]
mazegenerator = { path = "mazegenerator-00001-py3-none-any.whl" }
